--- a/Task3_Dashboard_Grid&Flex.html
+++ b/Task3_Dashboard_Grid&Flex.html
@@ -54,7 +54,7 @@
         }
 
         .FlexCards {
-            background-color: gray;
+            background-color: rgb(107, 107, 107);
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             box-shadow: 1px 3px 7px 2px gray;
             border-radius: 2px;
@@ -74,16 +74,16 @@
 <body>
     <div class="container">
         <div class="upGrid">
-            <div class="cardGrid"> <i class="fa-solid fa-layer-group"></i><p>Dashboard</p></div>
-            <div class="cardGrid GridSpan1"> <i class="fa-solid fa-layer-group"></i><p>Dashboard</p></div>
-            <div class="cardGrid"> <i class="fa-solid fa-layer-group"></i><p>Dashboard</p></div>
-            <div class="cardGrid"> <i class="fa-solid fa-layer-group"></i><p>Dashboard</p></div>
-            <div class="cardGrid"> <i class="fa-solid fa-layer-group"></i><p>Dashboard</p></div>
-            <div class="cardGrid"> <i class="fa-solid fa-layer-group"></i><p>Dashboard</p></div>
-            <div class="cardGrid GridSpan2"> <i class="fa-solid fa-layer-group"></i><p>Dashboard</p></div>
-            <div class="cardGrid"> <i class="fa-solid fa-layer-group"></i><p>Dashboard</p></div>
-            <div class="cardGrid"> <i class="fa-solid fa-layer-group"></i><p>Dashboard</p></div>
-            <div class="cardGrid"> <i class="fa-solid fa-layer-group"></i><p>Dashboard</p></div>
+            <div class="cardGrid" style="color: ;"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p>Dashboard</p></div>
+            <div class="cardGrid GridSpan1"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p>charts</p></div>
+            <div class="cardGrid"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p>Widget</p></div>
+            <div class="cardGrid"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p>Tables</p></div>
+            <div class="cardGrid"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p>Full width</p></div>
+            <div class="cardGrid"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p></p>buttons</div>
+            <div class="cardGrid GridSpan2"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p>Forms</p></div>
+            <div class="cardGrid"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p>Elements</p></div>
+            <div class="cardGrid"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p>Clendar</p></div>
+            <div class="cardGrid"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p>Erros</p></div>
         </div>
 
         <!-- Grid ends here -->
@@ -93,12 +93,12 @@
             </div>
 
             <div class="rightCrads">
-                <div class="FlexCards"><i class="fa-solid fa-user"></i><p>1234</p><p>Hello</p></div>
-                <div class="FlexCards"><i class="fa-solid fa-user"></i><p>1234</p><p>Hello</p></div>
-                <div class="FlexCards"><i class="fa-solid fa-user"></i><p>1234</p><p>Hello</p></div>
-                <div class="FlexCards"><i class="fa-solid fa-user"></i><p>1234</p><p>Hello</p></div>
-                <div class="FlexCards"><i class="fa-solid fa-user"></i><p>1234</p><p>Hello</p></div>
-                <div class="FlexCards"><i class="fa-solid fa-user"></i><p>1234</p><p>Hello</p></div>
+                <div class="FlexCards"><i class="fa-solid fa-user"></i><p>1234</p><p>Total USer</p></div>
+                <div class="FlexCards"><i class="fa-solid fa-user"></i><p>1234</p><p>New USer</p></div>
+                <div class="FlexCards"><i class="fa-solid fa-user"></i><p>1234</p><p>Total Shops</p></div>
+                <div class="FlexCards"><i class="fa-solid fa-user"></i><p>1234</p><p>Total Orders</p></div>
+                <div class="FlexCards"><i class="fa-solid fa-user"></i><p>1234</p><p>Pending orders</p></div>
+                <div class="FlexCards"><i class="fa-solid fa-user"></i><p>1234</p><p>Online orders</p></div>
             </div>
         </div>
     </div>
