edit more text and icons

--- a/Task3_Dashboard_Grid&Flex.html
+++ b/Task3_Dashboard_Grid&Flex.html
@@ -50,6 +50,7 @@
             display: flex;
             flex-wrap: wrap;
             gap: 10px; 
+            color: white;
             flex: 1; 
         }
 
@@ -93,12 +94,12 @@
             </div>
 
             <div class="rightCrads">
-                <div class="FlexCards"><i class="fa-solid fa-user"></i><p>1234</p><p>Total USer</p></div>
-                <div class="FlexCards"><i class="fa-solid fa-user"></i><p>1234</p><p>New USer</p></div>
-                <div class="FlexCards"><i class="fa-solid fa-user"></i><p>1234</p><p>Total Shops</p></div>
-                <div class="FlexCards"><i class="fa-solid fa-user"></i><p>1234</p><p>Total Orders</p></div>
-                <div class="FlexCards"><i class="fa-solid fa-user"></i><p>1234</p><p>Pending orders</p></div>
-                <div class="FlexCards"><i class="fa-solid fa-user"></i><p>1234</p><p>Online orders</p></div>
+                <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>2540><p>Total USer</p></div>
+                <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>120><p>New USer</p></div>
+                <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>656><p>Total Shops</p></div>
+                <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>9540<p>Total Orders</p></div>
+                <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>100</p><p>Pending orders</p></div>
+                <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>8540</p><p>Online orders</p></div>
             </div>
         </div>
     </div>
