--- a/Task3_Dashboard_Grid&Flex.html
+++ b/Task3_Dashboard_Grid&Flex.html
@@ -94,9 +94,9 @@
             </div>
 
             <div class="rightCrads">
-                <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>2540><p>Total USer</p></div>
-                <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>120><p>New USer</p></div>
-                <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>656><p>Total Shops</p></div>
+                <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>2540<p>Total USer</p></div>
+                <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>120<p>New USer</p></div>
+                <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>656<p>Total Shops</p></div>
                 <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>9540<p>Total Orders</p></div>
                 <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>100</p><p>Pending orders</p></div>
                 <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>8540</p><p>Online orders</p></div>
