task icons changes

--- a/Task3_Dashboard_Grid&Flex.html
+++ b/Task3_Dashboard_Grid&Flex.html
@@ -52,6 +52,9 @@
             gap: 10px; 
             color: white;
             flex: 1; 
+            align-items: center;
+            
+
         }
 
         .FlexCards {
@@ -62,8 +65,11 @@
             font-size: 20px;
             text-align: center;
             flex: 1 1 30%; 
-            min-width: 30%; 
+            min-width: 20%; 
             box-sizing: border-box;
+            text-align: center;
+            align-items: center;
+            padding-top: 4vh;
         }
 
         img {
@@ -76,9 +82,9 @@
     <div class="container">
         <div class="upGrid">
             <div class="cardGrid" style="color: ;"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p>Dashboard</p></div>
-            <div class="cardGrid GridSpan1"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p>charts</p></div>
-            <div class="cardGrid"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p>Widget</p></div>
-            <div class="cardGrid"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p>Tables</p></div>
+            <div class="cardGrid GridSpan1"> <i class="fa-solid fa-chart-line" style="color: white;"></i><p>charts</p></div>
+            <div class="cardGrid"> <i class="fa-solid fa-cube" style="color: white;"></i><p>Widget</p></div>
+            <div class="cardGrid"> <i class="fa-solid fa-table" style="color: white;"></i><p>Tables</p></div>
             <div class="cardGrid"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p>Full width</p></div>
             <div class="cardGrid"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p></p>buttons</div>
             <div class="cardGrid GridSpan2"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p>Forms</p></div>
