icons edit color

--- a/Task3_Dashboard_Grid&Flex.html
+++ b/Task3_Dashboard_Grid&Flex.html
@@ -18,7 +18,7 @@
         }
 
         .cardGrid {
-            background-color: blue;
+            background-color: rgba(9, 151, 169, 0.781);
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             padding: 7px;
             box-shadow: 1px 3px 7px 2px gray;
@@ -70,7 +70,7 @@
             text-align: center;
             align-items: center;
             padding-top: 4vh;
-        }
+       
 
         img {
             flex: 1 1 70%;
@@ -85,12 +85,12 @@
             <div class="cardGrid GridSpan1"> <i class="fa-solid fa-chart-line" style="color: white;"></i><p>charts</p></div>
             <div class="cardGrid"> <i class="fa-solid fa-cube" style="color: white;"></i><p>Widget</p></div>
             <div class="cardGrid"> <i class="fa-solid fa-table" style="color: white;"></i><p>Tables</p></div>
-            <div class="cardGrid"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p>Full width</p></div>
-            <div class="cardGrid"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p></p>buttons</div>
+            <div style="background-color:blue ;" class="cardGrid"> <i class="fa-solid fa-barcode" style="color: white;"></i><p>Full width</p></div>
+            <div style="background-color: blue ;" class="cardGrid"> <i class="fa-solid fa-dice-five" style="color: white;"></i><p></p>buttons</div>
             <div class="cardGrid GridSpan2"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p>Forms</p></div>
-            <div class="cardGrid"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p>Elements</p></div>
-            <div class="cardGrid"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p>Clendar</p></div>
-            <div class="cardGrid"> <i class="fa-solid fa-layer-group" style="color: white;"></i><p>Erros</p></div>
+            <div style="background-color: rgba(9, 151, 169, 0.781);" class="cardGrid"> <i class="fa-brands fa-elementor" style="color: white;"></i><p>Elements</p></div>
+            <div style="background-color:green ;" class="cardGrid"> <i class="fa-regular fa-calendar-days" style="color: white;"></i><p>Clendar</p></div>
+            <div style="background-color: orange;" class="cardGrid"> <i class="fa-solid fa-triangle-exclamation" style="color: white;"></i><p>Erros</p></div>
         </div>
 
         <!-- Grid ends here -->
@@ -100,8 +100,8 @@
             </div>
 
             <div class="rightCrads">
-                <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>2540<p>Total USer</p></div>
-                <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>120<p>New USer</p></div>
+                <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>2540<p>Total User</p></div>
+                <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>120<p>New User</p></div>
                 <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>656<p>Total Shops</p></div>
                 <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>9540<p>Total Orders</p></div>
                 <div class="FlexCards"><i class="fa-solid fa-user" style="color: white;"></i><p>100</p><p>Pending orders</p></div>
